<resources>
    <string name="app_name">Pilot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_user_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Register New User</string>
    <string name="your_last_name">Your last name</string>
    <string name="your_first_name">Your first name</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
    <string name="register">Register</string>
    <string name="request">Request service</string>

    <!-- Firebase Database and Property -->
    <string name="tbl_UserInfo">UserInfo</string>
    <string name="tbl_Rooms">rooms</string>
    <string name="tbl_Request">requests</string>
    <string name="tbl_Users">users</string>
    <string name="tbl_Message">messages</string>

    <!-- UserInfo fields-->
    <string name="f_Country">Country</string>
    <string name="f_FName">FirstName</string>
    <string name="f_LName">lastName</string>
    <string name="f_Gender">Gender</string>
    <string name="f_Lat">Latitude</string>
    <string name="f_Long">Longitude</string>
    <string name="f_Password">Password</string>
    <string name="f_SourceLang">SourceLang</string>
    <string name="f_User">User</string>
    <string name="f_Dob">dateofbirth</string>
    <string name="f_ID">id</string>
    <string name="f_tar_lang1">targetLang1</string>
    <string name="f_tar_lang2">targetLang2</string>
    <string name="f_tar_lang3">targetLang3</string>
    <string name="f_tar_lang4">targetLang4</string>
    <string name="f_tar_lang5">targetLang5</string>
    <string name="f_tar_lang6">targetLang6</string>

    <!-- rooms fields -->
    <string name="f_VideoTranslated">VideoTranslated</string>
    <string name="f_acceptedRequest">acceptedRequest</string>
    <string name="f_createdUser">createdUser</string>
    <string name="f_finished">finished</string>
    <string name="f_imageTranslated">imageTranslated</string>
    <string name="f_key">key</string>
    <string name="f_modeSelect">modeselect</string>
    <string name="f_srcLang">sourceLang</string>
    <string name="f_tarLang">targetLang</string>
    <string name="f_translatorId">translatorId</string>
    <string name="f_videoTranslated">videoTranslated</string>
    <string name="f_voiceMsgTranslated">voiceMsgTranslated</string>


    <string-array name="genders">
        <item>Select your gender</item>
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <string-array name="languages">
        <item>German</item>
        <item>English</item>
        <item>Chinese</item>
        <item>Vietnamesse</item>
    </string-array>

    <string-array name="modes">
        <item>Video Conference</item>
        <item>Real time chat</item>
        <item>Image</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="connect">connect</string>
    <string name="endcall">End Call</string>


</resources>
