<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.etranslate.pilot.user.RegisterActivity" android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menu_slideshow"
    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:hint="@string/enter_email"
            android:id="@+id/edtEmail"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:id="@+id/edtPassword"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/your_first_name"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:id="@+id/edtFname"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/your_last_name"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:ems="10"
            android:id="@+id/edtLname"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/spinner"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:entries="@array/genders"/>

    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/genders"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:entries="@array/languages"
            android:prompt="Select your genders"
    />


    <Button
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button"/>

</LinearLayout>
